--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-manipulator": "~13.0.5",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.5",
@@ -35,6 +36,7 @@
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.0.2",
+    "lodash": "^4.17.21",
     "lucide-react-native": "^0.460.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -44,8 +46,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
-    "expo-image-manipulator": "~13.0.5"
+    "react-native-webview": "13.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
